NavBar overlap of menu with logo fixed. Configurations and edit profile fixes in layout. Reports responsivity in Dashboard tab.

--- a/src/layouts/Navbar/components/navigationStyles.css
+++ b/src/layouts/Navbar/components/navigationStyles.css
@@ -2,7 +2,7 @@
 
 .sideMenu{
     width: 260px;
-    padding-top: 40px;
+    padding-top: 20px;
     background-color: #17625D;
     height: 100%;
     color: #fff;
@@ -11,7 +11,7 @@
 .menuLink{
     justify-content: left !important;
     font-size: 1.2em !important;
-    padding: 10px 20px !important;
+    padding: 7px 20px !important;
     font-family: 'Poppins' !important;
     text-transform: capitalize !important;
 }
